Add draft header

--- a/src/conclusion.tex
+++ b/src/conclusion.tex
@@ -1,10 +1,11 @@
 %!TEX root = ../main.tex
 
-\chapter{Conclusion\label{chap:conclusion}}
+\chapter{Conclusion DRAFT\label{chap:conclusion}}
 
 Summarize the achieved results.
 Can be similar as an abstract or an introduction, however, it should be written in past tense.
 
+\section{TODO: REMOVE CONCLUSION STRUCTURE}
 \begin{itemize}
     \item Summarize the key takeaways from the research, emphasizing the most effective text representation model for RAG in technical QA based on the evaluation criteria.
     \item Briefly mention the trade-offs between factuality, CPU usage, and other factors in selecting representations for RAG.
