--- a/src/title.tex
+++ b/src/title.tex
@@ -8,7 +8,7 @@
     \Department\\
     Czech Institute of Informatics, Robotics and Cybernetics\\[3em]
     }
-    \includegraphics[height=4.1cm]{fig/ctu_logo_blue.pdf}\\[3em]
+    \includegraphics[height=4.1cm]{src/fig/pdfs/ctu_logo_blue.pdf}\\[3em]
 
     \textbf{\textsc{\Huge \Title}}\\[2em]
 
