--- a/main.bib
+++ b/main.bib
@@ -373,7 +373,7 @@
   primaryclass  = {cs.CL}
 }
 
-% RAG with different embeddings
+% Umar Jamil YouTube Channel
 @misc{umarjamilai,
   title  = {Umar Jamil [YouTube Channel]},
   author = {Umar Jamil},
