discussion: remove structure

--- a/src/discussion.tex
+++ b/src/discussion.tex
@@ -1,6 +1,6 @@
 %!TEX root = ../main.tex
 
-\chapter{Discussion DRAFT\label{chap:discussion}}
+\chapter{Discussion\label{chap:discussion}}
 
 \section{Findings}
 This study demonstrates the potential advantages of transformer-based models for text representation compared to traditional models like fastText.
@@ -15,13 +15,9 @@ Finally, the study observed that unsupervised training methods employed by some 
 This suggests that supervised training on high-quality, task-specific datasets may be necessary to achieve optimal performance in tasks involving semantic similarity assessment.
 
 
-\section{Strengths and limitations of the chosen evaluation methods}
-
 \section{Improvements for future research}
 This study exclusively employed pre-trained models for the evaluation process.
 While these models achieved promising results, a potential avenue for future research lies in fine-tuning the models specifically for the task of assessing semantic similarity in Czech text.
-
-
 
 We use English dataset for \ac{RAG}  evaluation in out work.
 Optimal chunk size for Czech and English languages can vary, because of different sizes of average words. 
@@ -32,13 +28,12 @@ The initial K values were chosen to be proportional to the chunk size, similar t
 However, to ensure optimal performance for the \ac{QA} task, it is recommended to further investigate the impact of varying K values.
 Evaluating a broader range of K values alongside the chunk size variations will enable the identification of the optimal configuration for maximizing RAG's performance within the context of this specific English technical document retrieval task.
 
-\section{TODO: REMOVE DISCUSSION STRUCTURE}
-\begin{itemize}
-    \item Interpret the overall findings and their implications for choosing suitable text representations for RAG in technical QA tasks.
-    \item Discuss the strengths and limitations of the chosen evaluation methods.
-    \item Address potential challenges encountered during the study and suggest improvements for future research.
-\end{itemize}
 
 
 
-
+% \section{DISCUSSION STRUCTURE}
+% \begin{itemize}
+%     \item Interpret the overall findings and their implications for choosing suitable text representations for RAG in technical QA tasks.
+%     \item Discuss the strengths and limitations of the chosen evaluation methods.
+%     \item Address potential challenges encountered during the study and suggest improvements for future research.
+% \end{itemize}
