experiments: minor fix

--- a/src/experiments_and_results.tex
+++ b/src/experiments_and_results.tex
@@ -20,8 +20,8 @@ The SimCSE-RetroMAE-Small model emerged as the clear leader within this group, s
 \subsubsection{Multilingual models}
 Among the evaluated multilingual models, all versions of mE5 and LaBSE demonstrated particularly promising performance.
 Notably, mE5 achieved the highest overall results within the tested models.
-Confusion matrices of evaluation are shown at \reffig{fig:Confusion_matrices}.
 This suggests that the training objectives and architectures employed for these models might be well-suited for capturing semantic similarity across languages, including Czech.
+Confusion matrices of \ac{mE5}\textsubscript{Large} evaluation are shown at \reffig{fig:Confusion_matrices}.
 
 Paraphrase-Multilingual-MiniLM-L12-v2 and Paraphrase-Multilingual-MPNet-Base-v2 exhibited strong performance when applied to text containing diacritics.
 However, their performance appeared less effective when handling diacriticless text.
