methodology: add info abou qa_evaluator

--- a/src/methodology.tex
+++ b/src/methodology.tex
@@ -384,6 +384,8 @@ This selection is based on its performance as the highest-scoring transformer mo
 
 For the \ac{LLM} component of \ac{RAG}, we will utilize GPT-3.5-turbo \cite{brown2020language}.
 
+The evaluation will be conducted using the jirkoada\/qa\_evaluator \footnote {jirkoada/qa\_evaluator on github: \url{https://github.com/jirkoada/qa_evaluator}} tool.
+
 
 \subsection{Experiment hardware}
 The computational workload was handled by an Intel Core i7-8550U CPU.
