--- a/src/acknowledgments.tex
+++ b/src/acknowledgments.tex
@@ -2,6 +2,15 @@
 
 \section*{Acknowledgments}
 
-Firstly, I would like to express my gratitude to my supervisor.
+I would like to express my sincere gratitude to my supervisor, Ing. Jan Šedivý, CSc., for his invaluable advice and unwavering support throughout the past year.
+His guidance and expertise were instrumental in the completion of this research.
+
+I am also deeply grateful to my colleague, Bc. Adam Jirkovský, for his significant contribution to this research.
+Adam's expertise and the code he developed played a crucial role in making this work possible.
+
+Furthermore, I extend my heartfelt thanks to my family: Inessa Davtyan, Inna Zviazdova, Maryia Zviazdova, Natalia Pankova, and Viachaslau Zviazdou.
+Their unwavering moral and financial support, along with their constant encouragement, were a source of strength throughout my academic journey.
+
+Finally, I would like to thank my friends, Vsevolod Tiemnohorov, Viachaslau Radzeuski, and Stepan Byeloushko, for their unwavering support during this challenging yet rewarding experience.
 
 \vspace{2.5cm}
