fix Stsiapan Belaushka name

--- a/src/acknowledgments.tex
+++ b/src/acknowledgments.tex
@@ -11,6 +11,6 @@ Adam's expertise and the code he developed played a crucial role in making this 
 Furthermore, I extend my heartfelt thanks to my family: Inessa Davtyan, Inna Zviazdova, Maryia Zviazdova, Natalia Pankova, and Viachaslau Zviazdou.
 Their unwavering moral and financial support, along with their constant encouragement, were a source of strength throughout my academic journey.
 
-Finally, I would like to thank my friends, Vsevolod Tiemnohorov, Viachaslau Radzeuski, and Stepan Byeloushko, for their unwavering support during this challenging yet rewarding experience.
+Finally, I would like to thank my friends, Vsevolod Tiemnohorov, Viachaslau Radzeuski, and Stsiapan Belaushka, for their unwavering support during this challenging yet rewarding experience.
 
 \vspace{2.5cm}
