--- a/src/abbreviations.tex
+++ b/src/abbreviations.tex
@@ -2,7 +2,7 @@
 
 \begin{acronym}
   % Usual CS acronyms
-  \acro{NLP}[NLP]{Natural Language Procession}
+  \acro{NLP}[NLP]{Natural Language Processing}
   \acro{RAG}[RAG]{Retrieval-Augmented Generation}
   \acro{STS}[STS]{Semantic Textual Similarity}
   \acro{QA}[QA]{Question Answering}
