main: fix KlicovaSlova

--- a/main.tex
+++ b/main.tex
@@ -14,7 +14,7 @@
 % \newcommand{\Title}{My Thesis Title\\[0.5em]Can Span Multiple Lines}
 \newcommand{\Title}{From FastText to Transformer \\[0.05em]Models, and their Application in \\[0.2em]Retrieval-Augmented Generation}
 \newcommand{\Keywords}{\ac{NLP}, Word Embedding, Transformers, \ac{RAG}, \ac{QA}, \ac{STS}}
-\newcommand{\KlicovaSlova}{\ac{NLP}, Word Embedding, Transformátory, \ac{RAG}, \ac{QA}, Sémantická podobnost textu}
+\newcommand{\KlicovaSlova}{\ac{NLP}, Word Embedding, Transformátory, \ac{RAG}, \ac{QA}, Sémantická Podobnost Textu}
 \newcommand{\Year}{2024}
 \newcommand{\Month}{May}
 \newcommand{\Date}{\Month~\Year}
