--- a/src/abstract_en.tex
+++ b/src/abstract_en.tex
@@ -7,13 +7,12 @@
 \section*{Abstract}
 \vskip 0.5em
 
-This thesis investigates the application of word and sentence embeddings in \ac{RAG} for factual \ac{QA} tasks using technical manuals.
-The study explores the effectiveness of traditional FastText embeddings and advanced transformer-based models like \ac{BERT} in capturing semantic relationships within text.
-We evaluate the quality of these representations using analogy tests and confusion matrix analysis on the UPV corpus set.
+This thesis examines the evolution of text representation methods, starting from traditional techniques like FastText and advancing to sophisticated transformer-based models such as \ac{BERT}.
+The study evaluates these representations through analogy tests and confusion matrix analysis, utilizing the UPV corpus set for comprehensive assessment.
 
-Subsequently, we will select optimal representations for \ac{RAG} algorithms and assess their impact on factual accuracy and computational efficiency during \ac{QA}.
-By analyzing the performance with different text chunk sizes, we aim to identify the optimal configuration for factual \ac{RAG} in technical domains.
-This research contributes to the field of \ac{NLP} by providing insights into selecting effective representations that balance factual accuracy and computational efficiency for \ac{QA} systems.
+In the latter part of the research, the focus shifts to optimizing text representations for \ac{RAG} algorithms.
+The investigation aims to identify the most effective embeddings and determine the optimal text chunk size for \ac{QA} tasks, particularly within the realm of generating natural language answers from technical manuals.
+A thorough evaluation is conducted to recommend an optimal representation model that strikes a balance between factual accuracy and computational efficiency.
 
 \vskip 1em
 
