--- a/src/abstrakt_cz.tex
+++ b/src/abstrakt_cz.tex
@@ -9,13 +9,12 @@
 
 \sloppy
 
-Tato práce zkoumá aplikaci embeddingů slov a vět v modelu \ac{RAG} pro úlohy \ac{QA} zaměřené na fakta s využitím technických příruček.
-Studie se zabývá účinností tradičních embeddingů FastText a pokročilých modelů založených na transformátoru, jako je \ac{BERT}, při zachycování sémantických vztahů v textu.
-Kvalitu těchto reprezentací hodnotíme pomocí analogových testů a analýzy confusion matrix na korpusu UPV.
-Následně vybereme optimální reprezentace pro algoritmy \ac{RAG} a posoudíme jejich vliv na faktickou přesnost a výpočetní efektivitu během \ac{QA}.
-Analýzou výkonu s různými velikostmi textových fragmentů se snažíme identifikovat optimální konfiguraci pro faktické \ac{RAG} v technických oborech.
-Výzkum přispívá k oblasti zpracování přirozeného jazyka (\ac{NLP}) tím, že poskytuje poznatky o výběru efektivních reprezentací, které vyvažují faktickou přesnost a výpočetní efektivitu pro systémy \ac{QA}.
+Tato práce zkoumá vývoj metod reprezentace textu, od tradičních technik jako FastText až po sofistikované modely založené na transformátorech, jako je \ac{BERT}.
+Studie hodnotí tyto reprezentace prostřednictvím testů analogie a analýzy matic záměn, přičemž využívá korpus UPV pro komplexní posouzení.
 
+V pozdější části výzkumu se pozornost přesouvá k optimalizaci reprezentací textu pro algoritmy \ac{RAG}.
+Výzkum si klade za cíl identifikovat nejúčinnější vektory a určit optimální velikost textových bloků pro úkoly \ac{QA}, zejména v oblasti generování odpovědí v přirozeném jazyce z technických manuálů.
+Provádí se důkladné hodnocení s cílem doporučit optimální model reprezentace, který vyvažuje faktickou přesnost a výpočetní efektivitu.
 
 \vskip 1em
 
