RAG_eval: Add time mean

--- a/src/tables/RAG_evaluation.tex
+++ b/src/tables/RAG_evaluation.tex
@@ -2,16 +2,16 @@
     \centering
     \begin{tabular}{lc|ccc}
       \toprule
-      $S_{chunk}$ & $K$ & ACC & $t_{encoding}$ \\
+      $S_{chunk}$ & $K$ & ACC & $t_{mean}$ \\
       \midrule
-      256  & 12 & N/A & 26m 46s \\
-      512  & 6  & N/A & 34m 14s \\
-      1024 & 3  & N/A & N/A \\
-      2048 & 2  & N/A & N/A \\
-      4096 & 1  & N/A & N/A \\
+      256  & 12 & N/A & 131s \\
+      512  & 6  & N/A & 161s \\
+      1024 & 3  & N/A & 162s \\
+      2048 & 2  & N/A & 115s \\
+      4096 & 1  & N/A & 77s \\
       \bottomrule
     \end{tabular}
-    \caption{\textbf{RAG evaluation with different parameters.}}
+    \caption{RAG evaluation with different parameters.}
     \label{tab:RAG_evaluation}
   \end{table*}
   
